--- a/landing_styles.css
+++ b/landing_styles.css
@@ -4,10 +4,6 @@
   box-sizing: border-box;
 }
 
-/* .landi{
-  background-image: url(assets/landing.gif);
-} */
-
 @font-face {
   font-family: "Boiling";
   src: url("./assets/fonts/BoilingBlackDemo-jEReR.ttf");
@@ -228,14 +224,14 @@ video {
 .logout-button {
   position: absolute;
   top: 61vh;
-  right: 42vw;
+  right: 40vw;
   padding: 1rem 2rem;
   font-size: xx-large !important;
   font-family: "poppins";
   cursor: pointer;
   color: rgb(255, 255, 255);
   font-weight: 700;
-  background-color: rgba(46, 43, 38, 0.9);
+  background-color: rgba(10, 10, 10, 0.9);
   box-shadow: rgba(46, 47, 48, 0.6) 0px 5px 0px 0px;
   border-radius: 20px;
   border-color: #fff;
@@ -261,7 +257,7 @@ video {
 
 .right::after,
 .register-button::after {
-  content: "Read Blogs";
+  content: "Visualize DatViz";
   display: block;
   position: absolute;
   white-space: nowrap;
@@ -318,8 +314,7 @@ video {
 .right::after {
   top: -3rem;
   left: calc(-66% - 2rem);
-
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: rgb(160, 175, 183);
   color: transparent;
   transition: transform 0.4s ease-out;
   transform: translate(0, -90%) rotate(0deg);
@@ -831,7 +826,7 @@ nav a:hover {
   position: relative;
   cursor: pointer;
   perspective: 1000px;
-  transition: all 0.8s ease-in;
+  transition: all 0.4s ease-in;
   opacity: 0.75;
   z-index: 1;
 }
