--- a/blog.css
+++ b/blog.css
@@ -26,7 +26,7 @@ body {
     border-right: 5px solid rgb(234, 227, 227);
     transform: rotate(45deg);
     margin: 10px;
-    animation: animate 2s infinite;
+    animation: animate infinite;
 }
 
 @keyframes animate {
