--- a/landing_styles.css
+++ b/landing_styles.css
@@ -585,12 +585,10 @@ label #cancel {
   right: 0;
   z-index: -10;
   height: 100%;
-  /* background-image: linear-gradient(
-    99.9deg,
-    rgba(27, 24, 31, 1) 21.2%,
-    rgba(50, 4, 89, 1) 84.8%
-  ); */
-  background-color: black;
+  background-image: url("assets/space.gif");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 /* navbar */
