--- a/visit.css
+++ b/visit.css
@@ -7,7 +7,7 @@
 }
 
 .myfont {
-    color: rgb(49, 107, 119);
+    color: rgb(55, 159, 182);
     font-style: italic;
 }
 
@@ -16,7 +16,7 @@
 }
 
 .hi {
-    color: rgb(136, 98, 48);
+    color: rgb(192, 125, 37);
     font-size: 18px;
 }
 
@@ -37,7 +37,7 @@
     border-right: 5px solid rgb(234, 227, 227);
     transform: rotate(45deg);
     margin: 10px;
-    animation: animate 2s infinite;
+    animation: animate infinite;
 }
 
 @keyframes animate {
