--- a/Tree/style.css
+++ b/Tree/style.css
@@ -67,7 +67,7 @@ body {
     display: inline-block;
     justify-content: center;
     align-items: center;
-    background-color: rgb(227, 222, 222);
+    background-color: rgb(255, 255, 255);
     margin-right: 10px;
     margin-top: 5px;
     border-radius: 50px;
@@ -81,8 +81,8 @@ body {
     margin-top: 1%;
     left: 10%;
     height: 85%;
-    background-color: white;
-    border: 2px solid black;
+    background-color: rgb(255, 255, 255);
+    /* border: 2px solid rgb(0, 58, 91); */
     overflow: auto;
 }
 
@@ -152,19 +152,19 @@ body {
     }
 }
 
-.arrow {
+.arrows {
     position: absolute;
-    top: 1%;
-    left: 2%;
+    top: -12%;
+    left: -11%;
     transform: translate(-50%, -50%);
     transform: rotate(90deg);
     cursor: pointer;
 }
 
-.arrow span {
+.arrows span {
     display: block;
-    width: 1.2vw;
-    height: 1.2vw;
+    width: 1vw;
+    height: 1vw;
     border-bottom: 5px solid rgb(234, 227, 227);
     border-right: 5px solid rgb(234, 227, 227);
     transform: rotate(45deg);
