--- a/Auth and Backend/style.css
+++ b/Auth and Backend/style.css
@@ -62,7 +62,7 @@ form.sign-in-form {
 
 .title {
   font-size: 2.2rem;
-  color: #444;
+  color: #e0dcdc;
   margin-bottom: 10px;
 }
 
@@ -82,7 +82,7 @@ form.sign-in-form {
 .input-field i {
   text-align: center;
   line-height: 55px;
-  color: #acacac;
+  color: #7f7d7d;
   transition: 0.5s;
   font-size: 1.1rem;
 }
@@ -98,7 +98,7 @@ form.sign-in-form {
 }
 
 .input-field input::placeholder {
-  color: #aaa;
+  color: #7f7d7d;
   font-weight: 500;
 }
 
@@ -119,9 +119,9 @@ form.sign-in-form {
   justify-content: center;
   align-items: center;
   margin: 0 0.45rem;
-  color: #333;
+  color: #ebe2e2;
   border-radius: 50%;
-  border: 1px solid #333;
+  border: 1px solid #5e5c5c;
   text-decoration: none;
   font-size: 1.1rem;
   transition: 0.3s;
@@ -165,7 +165,7 @@ form.sign-in-form {
   content: "";
   position: absolute;
   height: 2000px;
-  width: 2000px;
+  width: 1800px;
   top: -10%;
   right: 48%;
   transform: translateY(-50%);
@@ -202,6 +202,7 @@ form.sign-in-form {
   color: #fff;
   transition: transform 0.9s ease-in-out;
   transition-delay: 0.6s;
+  margin-top: 150px;
 }
 
 .panel h3 {
